--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-minify-css": "0.3.3",
     "gulp-notify": "2.2.0",
     "gulp-watch": "3.0.0",
-    "gulp-minify-html": "^1.0.4"
+    "gulp-minify-html": "^1.0.4",
+    "gulp-sftp": "0.1.5"
   }
 }
